@@ -1,3 +1,7 @@
+Fri Oct 20 23:03:36 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/bse/filtertest.cc: More refactoring.
+
 Fri Oct 20 14:01:19 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/bse/filtertest.cc: Refactoring. Adapted to the changes of the
